# eset

./: CMakeLists.txt  LICENSE  README.md  READMEJP.md
include/: archetype.h  bunshi.h  component_storage.h  compound.h  entity.h  eset.h  molecule.h  reference.h  set.h  signal.h  types.h  universe.h
src/: archetype.cpp  component_storage.cpp  compound.cpp  entity.cpp  molecule.cpp  reference.cpp  set.cpp  types.cpp  universe.cpp
test/: .gitignore  CMakeLists.txt  README.md  testing.cpp
